--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,8 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-x86-android-23
     - sys-img-armeabi-v7a-android-17
+before_install:
+    - -yes | sdkmanager "platforms;android-23"
+
+script:
+    - ./gradlew build connectedCheck
