--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ android:
     - sys-img-x86-android-23
     - sys-img-armeabi-v7a-android-17
 before_install:
-    - -yes | sdkmanager "platforms;android-23"
+    - yes | sdkmanager "platforms;android-23"
 
 script:
     - ./gradlew build connectedCheck
