--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: android
 dist: trusty
-
+# Ensure Apache Ant is intalled
+# (though trusty should come with this installed)
 addons:
   apt:
     packages:
       - ant
-
 android:
   components:
     # Uncomment the lines below if you want to
@@ -14,7 +14,7 @@ android:
     - platform-tools
 
     # The BuildTools version used by your project
-    - build-tools-23.0.3
+    - build-tools-28.0.3
 
     # The SDK version used to compile your project
     - android-23
@@ -24,18 +24,38 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
 
-    # Specify at least one system image,
+    # Specify at least one system image, 
     # if you need to run emulator(s) during your tests
-    - sys-img-x86-android-23
-    - sys-img-armeabi-v7a-android-17
-before_install:
-    # Accept licenses before building
-    - yes | sdkmanager --licenses
-    - yes | sdkmanager "platforms;android-23"
+
+    # The system image we will test on 
+    # Will use x86 on API 23
+    - sys-img-armeabi-v7a-android-23
+
+
+  licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+
+before_script:
+  # Emulator Management: Create, Start and Wait
+  # List ABI targets to troubleshoot ABI target issues
+  - android list targets
+
+  # Create, launch, unlock emulator
+  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a -c 100M
+  - emulator -avd test -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82
 
 script:
-
-
-    # Set permission and run build + test
+    # Set permission for gradle script
     - chmod +x gradlew
-    - ./gradlew build connectedCheck
+
+    # Gradle command to run unit tests
+    # that run on the JVM
+    - ./gradlew test
+
+    # Gradle command to run instrumentation tests
+    # located in module-name/src/androidTest/java/
+    - ./gradlew connectedAndroidTest
