--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ android:
     - platform-tools
 
     # The BuildTools version used by your project
-    - build-tools-28.0.3
+    - build-tools-26.0.2
 
     # The SDK version used to compile your project
-    - android-28
+    - android-26
 
     # Additional components
     - extra-google-google_play_services
@@ -28,8 +28,7 @@ android:
     # if you need to run emulator(s) during your tests
 
     # The system image we will test on 
-    # Will use x86 on API 23
-    - sys-img-armeabi-v7a-android-28
+    - sys-img-x86-android-26
 
   licenses:
     - 'android-sdk-preview-license-.+'
@@ -42,7 +41,7 @@ before_script:
   - android list targets
 
   # Create, launch, unlock emulator
-  - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a -c 100M
+  - echo no | android create avd --force -n test -t android-26 --abi x86 -c 100M
   - emulator -avd test -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82
