--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ android:
     - build-tools-28.0.3
 
     # The SDK version used to compile your project
-    - android-23
+    - android-26
 
     # Additional components
     - extra-google-google_play_services
@@ -28,14 +28,21 @@ android:
     # if you need to run emulator(s) during your tests
 
     # The system image we will test on 
-    # Will use x86 on API 23
-    - sys-img-armeabi-v7a-android-23
-
+    - sys-img-x86-android-26
+    - android-22
+    - sys-img-armeabi-v7a-android-22
+    - sys-img-armeabi-v7a-android-17
 
   licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
+
+before_install:
+  - mkdir "$ANDROID_HOME/licenses" || true
+  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+  - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+
 
 before_script:
   # Emulator Management: Create, Start and Wait
@@ -43,7 +50,7 @@ before_script:
   - android list targets
 
   # Create, launch, unlock emulator
-  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a -c 100M
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82
