--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ android:
     # Specify at least one system image, 
     # if you need to run emulator(s) during your tests
 
-    # The system image we will test on 
+    # The system image we will test on
+    - sys-img-x86-android-29
     - sys-img-x86-android-26
     - android-22
     - sys-img-armeabi-v7a-android-22
@@ -48,7 +49,7 @@ before_script:
   - android list targets
 
   # Create, launch, unlock emulator
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
+  - echo no | android create avd --force -n test -t android-29 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
