--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ android:
     - android-22
     - sys-img-armeabi-v7a-android-22
     - sys-img-armeabi-v7a-android-17
-    - sys-img-armeabi-v7a-android-29
+    - sys-img-x86_64-android-29
 
   licenses:
     - '.+'
@@ -49,7 +49,7 @@ before_script:
   - android list targets
 
   # Create, launch, unlock emulator
-  - echo no | android create avd --force -n test -t android-29 --abi armeabi-v7a -c 100M
+  - echo no | android create avd --force -n test -t android-29 --abi x86_64 -c 100M
   - emulator -avd test -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
