--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,6 @@ android:
     - android-22
     - sys-img-armeabi-v7a-android-22
     - sys-img-armeabi-v7a-android-17
-    - android-25
-    - sys-img-armeabi-v7a-android-25
 
   licenses:
     - '.+'
@@ -50,7 +48,7 @@ before_script:
   - android list targets
 
   # Create, launch, unlock emulator
-  - echo no | android create avd --force -n test -t android-25 --abi "google_apis;armeabi-v7a" -c 100M
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
