--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: android
 dist: trusty
-# Ensure Apache Ant is intalled
+# Ensure Apache Ant is installed
 # (though trusty should come with this installed)
 addons:
   apt:
@@ -27,6 +27,7 @@ android:
     - android-22
     - sys-img-armeabi-v7a-android-22
     - sys-img-armeabi-v7a-android-17
+    - -sys-img-armeabi-v7a-android-25
 
   licenses:
     - '.+'
@@ -48,7 +49,7 @@ before_script:
   - android list targets
 
   # Create, launch, unlock emulator
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
+  - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
