--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: android
 dist: trusty
-# Ensure Apache Ant is intalled
+# Ensure Apache Ant is installed
 # (though trusty should come with this installed)
 addons:
   apt:
@@ -22,7 +22,7 @@ android:
     # Specify at least one system image, 
     # if you need to run emulator(s) during your tests
 
-    # The system image we will test on 
+    # The system image we will test on
     - sys-img-x86-android-26
     - android-22
     - sys-img-armeabi-v7a-android-22
@@ -38,8 +38,8 @@ before_install:
   - mkdir "$ANDROID_HOME/licenses" || true
   - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
   - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
-  - yes | sdkmanager "platforms;android-28"
-  - yes | sdkmanager "build-tools;28.0.3"
+  - yes | sdkmanager "platforms;android-29"
+  - yes | sdkmanager "build-tools;29.0.3"
 
 
 before_script:
