--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -6,4 +6,4 @@
 # This will automatically create a required review request from the users below before merging a branch.
 
 
-*             @indomie858    @dpalencie   @frankmaayn  @darknessvolt   @anne-xay     @ryunosuke500
+*             @indomie858    @dpalencie   @frankmaayn
