--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
 
+    //Mapbox dependencies
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.4.0'
+
     // Required -- JUnit 4 framework
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
