Removed Maps SDK and installed Navigation UI SDK

--- a/build.gradle
+++ b/build.gradle
@@ -19,20 +19,8 @@ allprojects {
         google()
         jcenter()
 
-        maven {
-            //Mapbox SDK Installation
-            url 'https://api.mapbox.com/downloads/v2/releases/maven'
-            authentication {
-                basic(BasicAuthentication)
-            }
-            credentials {
-                // Do not change the username below.
-                // This should always be `mapbox` (not your username).
-                username = 'mapbox'
-                // Use the secret token you stored in gradle.properties as the password
-                password = project.properties['MAPBOX_DOWNLOADS_TOKEN'] ?: ""
-            }
-        }
+        mavenCentral()
+        maven { url 'https://mapbox.bintray.com/mapbox' }
     }
 }
 
