--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
 
-    //Mapbox dependencies
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.4.0'
+    //Mapbox Navigation SDK dependencies
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.42.6'
 
     // Required -- JUnit 4 framework
     testImplementation 'junit:junit:4.12'
