Create a Recycler view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,13 +17,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
     dataBinding {
-        enabled true;
+        enabled = true;
     }
-
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
 }
 
