--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,19 +35,34 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
 
-    //Espresso Dependencies
+    // Espresso Dependencies
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     def room_version = "2.2.5"
+    def lifecycle_version = "2.2.0"
+
+    // Room
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-
     // optional - RxJava support for Room
     implementation "androidx.room:room-rxjava2:$room_version"
-
     // optional - Guava support for Room, including Optional and ListenableFuture
     implementation "androidx.room:room-guava:$room_version"
-
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
+
+    // CardView
+    implementation "androidx.cardview:cardview:1.0.0"
+    // Material Design
+    implementation "com.google.android.material:material:1.2.0"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    // Annotation processor
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
+
+
+
 }
