--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ui.SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
+        <activity
             android:name=".ui.MapActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
@@ -25,19 +28,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.NavigationListActivity"
+            android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:exported="true">
-            <!--<intent-filter>
+            android:theme="@style/AppTheme.NoActionBar">
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action." />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
-
     </application>
 
 </manifest>
