--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             android:label="@string/title_activity_settings"></activity>
         <activity
             android:name=".ui.MapActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName="com.example.appa.ui.MainActivity"/>
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
@@ -32,16 +33,9 @@
             android:name=".ui.NavigationListActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName="com.example.appa.ui.MainActivity"/>
 
-            <!--
-            <intent-filter>
-                <action android:name="android.intent.action." />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            -->
-        </activity>
     </application>
 
 </manifest>
