--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.DirectionsActivity"></activity>
+        <activity
+            android:name=".ui.DirectionsActivity"
+            android:exported="true"></activity>
         <activity
             android:name=".example.MapWithNavActivity"
             android:exported="true" />
