Added some Unit Testing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,14 @@ dependencies {
 
     // Espresso Dependencies
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
+
+    // androidx.test
+    def androidx_test = "1.1.0"
+    androidTestImplementation "androidx.test:runner:$androidx_test"
+    androidTestImplementation "androidx.test:core:$androidx_test"
+    androidTestImplementation "androidx.test.ext:junit-ktx:$androidx_test"
 
     def room_version = "2.2.5"
     def lifecycle_version = "2.2.0"
