--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.DirectionsActivity"
+            android:name=".ui.navigation.DirectionsActivity"
             android:exported="true"></activity>
         <activity
-            android:name=".example.MapWithNavActivity"
+            android:name=".ui.navigation.MapWithNavActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.ACTION_VIEW" />
