Skeleton for Bluetooth Connectivity
So far, it performs all necessary steps to connect, but fails at the very last step.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.BluetoothConnectAcitvity"
+            android:name=".bluetooth.BluetoothDialog"
             android:parentActivityName=".ui.MainActivity" />
         <activity
             android:name=".ui.SettingsActivity"
