--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         <activity
             android:name=".ui.navigation.NavigationMapRouteActivity"
             android:exported="true"></activity>
+        <activity android:name=".ui.navigation.InstructionViewActivity"
+            android:exported="true">
+        </activity>
         <activity
             android:name=".ui.navigation.DirectionsActivity"
             android:exported="true" />
