--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.iml
 .gradle
+.idea
 /local.properties
 /.idea/caches
 /.idea/libraries
@@ -12,6 +13,7 @@
 /captures
 .externalNativeBuild
 .cxx
+app/build
 
 # Built application files
 /*/build/
