--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.navigation.NavigationMapRouteActivity"
+            android:name=".ui.navigation.SummaryBottomSheetActivity"
             android:exported="true"></activity>
-        <activity android:name=".ui.navigation.InstructionViewActivity"
-            android:exported="true">
-        </activity>
+        <activity
+            android:name=".ui.navigation.NavigationMapRouteActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.navigation.InstructionViewActivity"
+            android:exported="true"></activity>
         <activity
             android:name=".ui.navigation.DirectionsActivity"
             android:exported="true" />
@@ -52,8 +55,6 @@
             android:label="@string/app_name"
             android:parentActivityName=".ui.MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
-
     </application>
 
 </manifest>
