--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         <activity
             android:name=".ui.navigation.DirectionsActivity"
             android:exported="true"
-            android:screenOrientation="portrait" ></activity>
+            android:screenOrientation="portrait"
+            ></activity>
         <activity
             android:name=".ui.navigation.MapWithNavActivity"
             android:exported="true"
