--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+.idea
 .DS_Store
 /build
 /captures
@@ -50,3 +51,4 @@ local.properties
 .Trashes
 ehthumbs.db
 Thumbs.db
+
