--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,11 +33,7 @@
             android:name=".ui.BluetoothDialog"
             android:parentActivityName=".ui.MainActivity"
             android:screenOrientation="portrait"/>
-        <activity
-            android:name=".ui.MapActivity"
-            android:exported="true"
-            android:parentActivityName=".ui.MainActivity"
-            android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
@@ -54,7 +50,8 @@
             android:exported="true"
             android:label="@string/app_name"
             android:parentActivityName=".ui.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait" />
 
 
     </application>
