--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,7 +106,8 @@ dependencies {
     def fragment_version = "1.2.5"
     androidTestImplementation "androidx.fragment:fragment-testing:$fragment_version"
 
-
+    //Android iBeacon Library - Altbeacon
+    implementation 'org.altbeacon:android-beacon-library:2+'
 }
 repositories {
     mavenCentral()
