--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -7,5 +7,5 @@
 
 
 
-*             @indomie858    @dpalencia   @frankmaayn  @darknessvolt   @anne-xay     @ryunosuke500
+*             @indomie858    @dpalencia   @frankmaayn  @darknessvolt   @anne-xay     @ryunosuke500  @FrankJoseph  @Ryunosuke
 
