--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name=".beacons.BeaconReferenceApplication">
+        <service android:enabled="true" android:name=".bluetooth.BluetoothServiceHandler" />
         <activity
             android:name=".ui.navigation.InstructionViewActivity"
             android:exported="true"
@@ -30,10 +31,10 @@
             android:name=".ui.navigation.CustomDirectionsActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
-        <activity
+        <!--<activity
             android:name=".ui.BluetoothDialog"
             android:parentActivityName=".ui.MainActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait" />-->
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
