--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:name=".beacons.BeaconReferenceApplication">
         <service android:enabled="true" android:name=".bluetooth.BluetoothServiceHandler" />
         <activity
-            android:name=".ui.navigation.InstructionViewActivity"
+            android:name=".ui.navigation.DirectionsActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:parentActivityName=".ui.navigationlist.NavigationListActivity">
@@ -27,14 +27,6 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.navigation.CustomDirectionsActivity"
-            android:exported="true"
-            android:screenOrientation="portrait" />
-        <!--<activity
-            android:name=".ui.BluetoothDialog"
-            android:parentActivityName=".ui.MainActivity"
-            android:screenOrientation="portrait" />-->
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
