--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'com.google.android.material:material:1.2.1'
 
-    //Material Components for Android - UI
+    // Google Play Services for getting user location
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
+
+    // Material Components for Android - UI
     implementation 'com.google.android.material:material:1.2.1'
 
     //Mapbox Navigation SDK dependencies
