--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,19 +8,27 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
+        android:name=".beacons.BeaconReferenceApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".beacons.BeaconReferenceApplication">
-        <service android:enabled="true" android:name=".bluetooth.BluetoothServiceHandler" />
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".ui.navigation.CompassActivity"
+            android:exported="true">
+        </activity>
+
+        <service
+            android:name=".bluetooth.BluetoothServiceHandler"
+            android:enabled="true" />
+
         <activity
             android:name=".ui.navigation.DirectionsActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".ui.navigationlist.NavigationListActivity">
+            android:parentActivityName=".ui.navigationlist.NavigationListActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.ACTION_VIEW" />
 
