--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.navigation.CompassActivity"
+            android:name=".ui.mapbox.CompassActivity"
             android:exported="true">
         </activity>
 
@@ -26,7 +26,7 @@
             android:enabled="true" />
 
         <activity
-            android:name=".ui.navigation.DirectionsActivity"
+            android:name=".ui.mapbox.DirectionsActivity"
             android:exported="true"
             android:parentActivityName=".ui.navigationlist.NavigationListActivity"
             android:screenOrientation="portrait">
