--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ui.navigationlist.DirectoryInformationActivity"
+            android:exported="true"></activity>
+        <activity
             android:name=".ui.mapbox.CompassActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
 
         <service
             android:name=".bluetooth.BluetoothServiceHandler"
